<resources>
    <string name="app_name">Ramalan Jodoh</string>
    <string name="action_settings">Tentang</string>
    <string name="action_rate">Rating..</string>
    <string name="action_share">Bagikan..</string>
    <string name="action_recent">Hasil Hitung</string>
    <string name="action_aufaq">Aplikasi Lain</string>
    <string name="action_ulama">Ulama Hikmah</string>
    <string name="action_help">Bantuan</string>
    <string name="action_hitung">Kalkulasi</string>
    <string name="action_lagi">Lagi!</string>
    <string name="laki">Masukan Nama Pria</string>
    <string name="hapus">Benar data pasangan %1$s dan %2$s akan dihapus?</string>
    <string name="tidak">Tidak</string>
    <string name="pilih">Pilih</string>
    <string name="tanya_hapus">Mau Hapus semuanya ?</string>
    <string name="app_link">"https://play.google.com/store/apps/details?id=smk.adzikro.ramalanjodoh"</string>
    <string name="action_exit">Exit</string>
    <string name="help">Bantuan Metode Ulama Hikmah</string>
    <string name="action_info">Info</string>
    <string name="action_donasi">Donasi</string>
    <string name="infoadzikro">Pesantren Adz-Dzikro Bandung</string>
    <string name="infoikmal">Pesantren Ummi Kultsum Cianjur</string>
    <string name="webadzikro">http://bit.ly/adzikro</string>
    <string name="webikmal">https://forms.gle/ozELBTbcSAqo68By8</string>
    <string name="todo">.</string>
    <string name="about">About</string>
    <string name="tentang">"Ramalan Jodoh \nVer %s \nSMK ADZ-DZIKRO BANDUNG"</string>
    <string name="rate">Rate</string>
    <string name="not_now">Tidak Sekarang</string>
    <string name="no">Tidak</string>
    <string name="ok">Ya</string>
    <string name="title_rate">Saya suka %s </string>
    <string name="no_play_store">Playstore tidak terpasang</string>
    <string name="done">Done</string>
    <string name="success_body">Sukses</string>
    <string name="congratulations">Selamat</string>
    <string name="sama">"Nama Pria dan Nama Wanita sama %1$s, tidak bisa diperidiksi "</string>
    <string name="ada">"Nama yang diinput %1$s and %2$s apakah sudah benar? dan lanjut diramal  "</string>
    <string name="tdbenar">Kata yang dimasukan mengandung gabungan huruf yang tidak benar</string>
    <string name="baik1">Pasangan %1$s dan %2$s menurut prediksi, perhitungn dan analisa dengan berbagai kemungkinan adalah pasangan yang cocok, serasi dan apabila menikah akan menjadi keluarga yang sukses</string>
    <string name="baik2">Berdasarkan berbagai prediksi, perhitungan, dan analisa, pasangan %1$s dan %2$s diprediksi sebagai pasangan yang serasi dan cocok, serta berpotensi membentuk keluarga yang sukses setelah menikah.</string>
    <string name="baik3">Menurut analisa dan perhitungan dengan berbagai kemungkinan, pasangan %1$s dan %2$s adalah pasangan yang ideal dan akan membentuk keluarga yang sukses jika menikah.</string>
    <string name="baik4">Dari berbagai sudut pandang perhitungan dan analisa, pasangan %1$s dan %2$s diperkirakan sangat cocok, serasi, dan akan menjalani kehidupan keluarga yang sukses setelah pernikahan.</string>
    <string name="baik5">Hasil analisa dan perhitungan menunjukkan bahwa pasangan %1$s dan %2$s adalah pasangan yang harmonis dan cocok, yang akan membentuk keluarga bahagia dan sukses setelah menikah.</string>
    <string name="baik6">Berdasarkan perhitungan dan analisa yang mendalam, pasangan %1$s dan %2$s dianggap sangat serasi dan akan menjadi keluarga yang sukses jika memutuskan untuk menikah.</string>
    <string name="baik7">Prediksi dan analisa menunjukkan bahwa pasangan %1$s dan %2$s memiliki kecocokan yang luar biasa dan akan membentuk keluarga yang sukses setelah menikah.</string>
    <string name="baik8">Melalui berbagai analisa dan perhitungan, pasangan %1$s dan %2$s diyakini memiliki kecocokan dan keharmonisan yang tinggi, serta akan membentuk keluarga yang sukses jika menikah.</string>
    <string name="baik9">Dengan memperhitungkan berbagai kemungkinan, pasangan %1$s dan %2$s diprediksi akan menjadi pasangan yang serasi dan sukses dalam membangun keluarga.</string>
    <string name="baik10">Berdasarkan analisa yang matang, pasangan %1$s dan %2$s diyakini sangat cocok dan akan membentuk keluarga yang sukses jika mereka menikah.</string>
    <string name="baik11">Menurut prediksi dan analisa, pasangan %1$s dan %2$s akan menjadi pasangan yang harmonis, serasi, dan berhasil membangun keluarga yang sukses setelah menikah.</string>
    <string name="buruk10">Pasangan %1$s dan %2$s menurut prediksi, perhitungn dan analisa dengan berbagai kemungkinan adalah pasangan yang kurang cocok atau kurang serasi, sering terjadi percekcokan dan apabila menikah akan menjadi keluarga yang tidak bahagia. %3$s!</string>
    <string name="buruk1">Berdasarkan prediksi, perhitungan, dan analisa dari berbagai kemungkinan, pasangan %1$s dan %2$s diperkirakan kurang cocok dan serasi, sering mengalami pertengkaran, dan apabila menikah, mereka berpotensi menjadi keluarga yang tidak bahagia. %3$s!</string>
    <string name="buruk2">Prediksi dan analisa menunjukkan bahwa pasangan %1$s dan %2$s tidak serasi, sering terlibat dalam perselisihan, dan apabila mereka menikah, kemungkinan besar akan mengalami ketidakbahagiaan dalam keluarga. %3$s!</string>
    <string name="buruk3">Menurut analisa dan perhitungan, pasangan %1$s dan %2$s dianggap kurang cocok dan sering bertengkar, yang berisiko membuat kehidupan keluarga mereka tidak bahagia jika mereka menikah. %3$s!</string>
    <string name="buruk4">Melalui prediksi dan analisa, pasangan %1$s dan %2$s tampaknya kurang serasi, sering terjadi konflik di antara mereka, dan kemungkinan besar akan membentuk keluarga yang tidak bahagia jika menikah. %3$s!</string>
    <string name="buruk5">Berdasarkan perhitungan dan analisa berbagai kemungkinan, pasangan %1$s dan %2$s diperkirakan kurang cocok dan sering mengalami pertengkaran, yang dapat mengarah pada kehidupan keluarga yang tidak bahagia setelah menikah. %3$s!</string>
    <string name="buruk6">Pasangan %1$s dan %2$s menurut analisa dan prediksi tidak serasi, sering terjadi ketegangan, dan apabila mereka menikah, keluarga yang terbentuk kemungkinan besar tidak akan bahagia. %3$s!</string>
    <string name="buruk7">Berdasarkan perhitungan dan analisa dengan berbagai kemungkinan, pasangan %1$s dan %2$s tidak cocok dan sering bertengkar, yang bisa berujung pada kehidupan keluarga yang penuh ketidakbahagiaan setelah pernikahan. %3$s!</string>
    <string name="buruk8">Prediksi dan analisa menunjukkan bahwa pasangan %1$s dan %2$s kurang serasi dan sering terlibat dalam konflik, yang berpotensi membuat mereka tidak bahagia sebagai keluarga setelah menikah. %3$s!</string>
    <string name="buruk9">Menurut berbagai analisa dan prediksi, pasangan %1$s dan %2$s kurang cocok dan sering mengalami perselisihan, sehingga kemungkinan besar keluarga mereka tidak akan bahagia jika mereka menikah. %3$s!</string>
    <string name="disclimer">Ganti nama sampai dapat pasangan yang cocok 😂🤣🥲🥲 </string>
    <string name="banner_ad_unit_id">ca-app-pub-3624492980147085/1371439657</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3624492980147085/3400975653</string>
    <string name="id_admob">ca-app-pub-3624492980147085~8894706455</string>
    <string name="wanita">Masukan Nama Wanita</string>
    <string name="retry">Retry</string>
    <string name="home">Home</string>
    <string name="image_description">hasil</string>
    <string name="action_ramal">Ramal</string>
    <string name="image_delete">Hapus</string>
    <string name="image_favorite">Favorite</string>
    <string name="berhasil">Nama Berhasil di kirim untuk dianalisa… tunggu hasilnya</string>
    <string name="gagal">Data Gagal dikirim untuk dianalisis !!</string>
    <string name="ar0">Pasangan %1$s dan %2$s akan sukses</string>
    <string name="ar1">Pasangan %1$s dan %2$s akan Bahagia</string>
    <string name="ar2">Pasangan %1$s dan %2$s pasangan Serasi</string>
    <string name="ar3">Pasangan %1$s dan %2$s pasangan barokah</string>
    <string name="ar4">Pasangan %1$s dan %2$s akan bertengkar terus</string>
    <string name="ar5">Pasangan %1$s dan %2$s tidak cocok</string>
    <string name="ar6">Pasangan %1$s dan %2$s akan susah</string>
    <string name="hasil0">Pasangan %1$s dan %2$s 👉 Perbedaan prinsip. Rentan memicu perdebatan, perselisihan paham, atau kecenderungan sering berpindah-pindah tempat tinggal.</string>
    <string name="hasil1">Pasangan %1$s dan %2$s 👉 Kurang baik. Hubungan diprediksi memiliki banyak rintangan, minim kebaikan di awalnya, atau rentan dipandang rendah.</string>
    <string name="hasil2">Pasangan %1$s dan %2$s 👉 Bagus dan berkah. Kehidupan rumah tangga diprediksi berjalan baik, harmonis, serta mendatangkan banyak ketenteraman.</string>
    <string name="hasil3">Pasangan %1$s dan %2$s 👉 Fluktuatif. Rumah tangga di awal terasa berat atau kurang baik, namun setelah melewati masa-masa sempit akan datang kelapangan dan kebaikan.</string>
    <string name="hasil4">Pasangan %1$s dan %2$s 👉 Kuat namun berisiko. Hubungan awalnya sangat kuat dan penuh kasih sayang, tetapi harus diwaspadai karena ada potensi perselisihan atau perpisahan di kemudian hari jika tidak dijaga.</string>
    <string name="hasil5">Pasangan %1$s dan %2$s 👉 Kemakmuran (Baitul Banin). Rumah tangga diprediksi makmur, subur, membawa banyak rezeki, serta dikaruniai keturunan yang baik</string>
    <string name="hasil6">Pasangan %1$s dan %2$s 👉 Ujian di akhir. Awal pernikahan berjalan sangat manis dan baik, namun rentan menghadapi duka cita atau kesusahan di masa-masa tua.</string>
    <string name="hasil7">Pasangan %1$s dan %2$s 👉 Sangat baik (Baitul Firosy). Rumah tangga diprediksi bahagia, dihormati oleh lingkungan sekitar, serta hidup berkecukupan dan penuh sukacita.</string>
    <string name="hasil8">Pasangan %1$s dan %2$s 👉 Banyak cobaan (Rumah Terbalik). Kondisi rumah tangga cenderung tidak stabil, penuh dinamika besar, dan memerlukan kesabaran ekstra dari kedua belah pihak.</string>
    <string name="medsos">Media Sosial</string>
    <string name="about_app">Terinspirasi dari kitab hikmah Al-Aufaq dalam menghitung ramal meramal jodoh, dengan dasar bahwa setiap huruf mempunyai nilai yang berbeda. sehingga setiap nama dengan menjumlahkan nilainya tersebut kemudian diolah sedemikian rupa kemudian di dapat hasil prediksi jodoh.
Bagi yang serius silahkan aktifkan analisis profesional AHLI HIKMAH</string>
    <string name="app_ver">Version %1$s</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="info">Informasi</string>
    <string name="display_name">Display Name</string>
    <string name="count_token">%1$d Token</string>
    <string name="have_token">Token yang dimiliki</string>
    <string name="token">TOKEN</string>
    <string name="info_token">"Token adalah tiket untuk bisa memproses menganalisa seberapa cocok pasangan"</string>
    <string name="info_token_value">"Untuk mendapatkan token yaitu membeli, mendapat bonus atau melakukan kegiatan advertising reward "</string>
    <string name="beli_token">Beli Token</string>
    <string name="harga_token">Rp. 6.000 mendapat 5 Token</string>
    <string name="bonus_token">Ambil Bonus Token</string>
    <string name="click_bonus">Tonton Iklan dan anda akan mendapatkan token</string>
    <string name="result_publsih">PUBLIKASI</string>
    <string name="hasil_publish">Hasil Prediksi dipublish</string>
    <string name="label_count_token">Jumlah TOKEN</string>
    <string name="language">Setting Bahasa</string>
</resources>