<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bill_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/purchase_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        app:title="@string/settings"
        app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />
    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/purchase_toolbar"
        android:elevation="@dimen/_16dp"
        android:visibility="gone"/>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/bill_nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ad_view_container"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/billing_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="24dp"
                android:text="@string/language"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/settings_info_token_label"
                style="@style/SettingsSectionLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/token" />

            <RelativeLayout
                android:id="@+id/verifikasi_token_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/info_token"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_token" />
                <TextView
                    android:id="@+id/info_token_value"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_token_value"
                    android:layout_below="@+id/info_token"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/beli_token_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/beli_token"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beli_token" />

                <TextView
                    android:id="@+id/is_versi_aplikasi"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/beli_token"
                    android:text="@string/harga_token" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/bonus_Token_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bonus_token"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bonus_token" />

                <TextView
                    android:id="@+id/bonus_token_value"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bonus_token"
                    android:text="@string/click_bonus" />
            </RelativeLayout>
            <include
                android:id="@+id/settings_token_divider"
                layout="@layout/divider" />

            <TextView
                android:id="@+id/settings_token_label"
                style="@style/SettingsSectionLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_count_token" />

            <RelativeLayout
                android:id="@+id/jumlah_token_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/status_token"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_token"/>

                <TextView
                    android:id="@+id/count_token"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/status_token"
                    android:text="@string/count_token"/>
            </RelativeLayout>
            <include
                android:id="@+id/settings_publish_divider"
                layout="@layout/divider" />

            <TextView
                android:id="@+id/settings_publish_label"
                style="@style/SettingsSectionLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result_publsih" />

            <RelativeLayout
                android:id="@+id/publish_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/result_publis"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/hasil_publish"/>
            </RelativeLayout>
            <include
                android:id="@+id/settings_info_user_divider"
                layout="@layout/divider" />

            <TextView
                android:id="@+id/info_user_label"
                style="@style/SettingsSectionLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info" />

            <RelativeLayout
                android:id="@+id/info_user_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/display_name"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/display_name" />

                <TextView
                    android:id="@+id/email"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/display_name"
                    tools:text="alqorut@gmail.com" />
            </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>