<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="8dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_photo"
            android:layout_width="0dp"
            android:layout_height="320dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/image_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:id="@+id/item_delete"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:background="@drawable/rounded_background"
            android:src="@drawable/ic_delete_vector"
            android:contentDescription="@string/image_delete"
            app:layout_constraintTop_toTopOf="@id/item_photo"
            app:layout_constraintEnd_toEndOf="@id/item_photo"/>

        <ImageView
            android:id="@+id/item_favorite"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:background="@drawable/rounded_background"
            android:src="@drawable/ic_favorite_border_white_24dp"
            android:contentDescription="@string/image_favorite"
            app:layout_constraintTop_toBottomOf="@id/item_delete"
            app:layout_constraintEnd_toEndOf="@id/item_photo"/>
        <ImageView
            android:id="@+id/item_share"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:background="@drawable/rounded_background"
            android:src="@drawable/ic_share_vector"
            android:contentDescription="@string/action_share"
            app:layout_constraintTop_toBottomOf="@id/item_favorite"
            app:layout_constraintEnd_toEndOf="@id/item_photo"/>

        <ImageView
            android:id="@+id/item_publish"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:elevation="@dimen/_100dp"
            android:background="@drawable/rounded_background"
            android:src="@drawable/ic_translation"
            android:contentDescription="@string/result_publsih"
            app:layout_constraintTop_toBottomOf="@id/item_share"
            app:layout_constraintEnd_toEndOf="@id/item_photo"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_background"
            app:layout_constraintTop_toTopOf="@id/tv_item_name"
            app:layout_constraintStart_toStartOf="@id/tv_item_name"
            app:layout_constraintEnd_toEndOf="@id/tv_item_name"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_name"/>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingVertical="4dp"
            android:paddingHorizontal="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:text="Emen"
            app:layout_constraintTop_toTopOf="@id/item_photo"
            app:layout_constraintStart_toStartOf="@id/item_photo"/>

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#CDFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/item_photo"
            app:layout_constraintEnd_toEndOf="@id/item_photo"
            app:layout_constraintTop_toTopOf="@id/item_description"/>

        <TextView
            android:id="@+id/item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            tools:text="@string/baik1"
            android:ellipsize="end"
            android:textSize="14sp"
            android:textStyle="normal"
            android:paddingTop="4dp"
            app:layout_constraintBottom_toTopOf="@id/item_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/item_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Minggu, 2 Januari 2022 18:34"
            android:textSize="12sp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="4dp"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>