<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_10dp"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        ads:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        android:fitsSystemWindows="true"
        app:cardElevation="20dp">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/settings_nested_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/icon_app"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon"
                    ads:layout_constraintEnd_toEndOf="parent"
                    ads:layout_constraintHeight_percent="0.3"
                    ads:layout_constraintStart_toStartOf="parent"
                    ads:layout_constraintTop_toTopOf="parent"
                    ads:layout_constraintWidth_percent="0.5" />
                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/icon_app"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:text="@string/app_name"
                    android:textSize="@dimen/_16sp"/>
                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/app_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    android:text="@string/app_ver"
                    tools:text="Version 3.0.0"/>
                <LinearLayout
                    android:id="@+id/about_holder"
                    app:layout_constraintTop_toBottomOf="@id/app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/settings_color_customization_section_label"
                    style="@style/SettingsSectionLabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/settings_color_customization_holder"
                    style="@style/SettingsHolderTextViewOneLinerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/settings_color_customization_label"
                        style="@style/SettingsTextLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/about_app"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>


                <include
                    android:id="@+id/settings_privacy_divider"
                    layout="@layout/divider" />
                <LinearLayout
                    android:id="@+id/pripacy_holder"
                    app:layout_constraintTop_toBottomOf="@id/about_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pripacy_section_label"
                        style="@style/SettingsSectionLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_policy" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/pripacy_customization_holder"
                        style="@style/SettingsHolderTextViewOneLinerStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/text_pprj"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/about_app"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>